Fixed more responsive issues on mobile

--- a/src/MudBlazor.Docs/Styles/pages/_landingpage.scss
+++ b/src/MudBlazor.Docs/Styles/pages/_landingpage.scss
@@ -571,7 +571,7 @@
 
     @media (max-width:600px) {
         .global-scale-item {
-            padding-bottom: 64px;
+            padding-bottom: 94px;
         }
 
         .world-map {
